force-app/main/default/objects/Asset_Delete_Rule__mdt/Asset_Delete_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Asset Delete Rule</label>
    <pluralLabel>Asset Delete Rules</pluralLabel>
</CustomObject>