force-app/main/default/objects/Asset_Delete_Rule__mdt/fields/BlockIfActiveLeaseExists_c__c.field-meta.xml
<CustomField>
    <fullName>BlockIfActiveLeaseExists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockIfActiveLeaseExists__c</label>
    <type>Checkbox</type>
</CustomField>