force-app/main/default/objects/Asset_Delete_Rule__mdt/fields/BlockIfAnyInvoiceExists_c__c.field-meta.xml
<CustomField>
    <fullName>BlockIfAnyInvoiceExists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockIfAnyInvoiceExists__c</label>
    <type>Checkbox</type>
</CustomField>