force-app/main/default/objects/Asset_Delete_Rule__mdt/fields/BlockIfAnyLeaseExists_c__c.field-meta.xml
<CustomField>
    <fullName>BlockIfAnyLeaseExists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockIfAnyLeaseExists__c</label>
    <type>Checkbox</type>
</CustomField>