force-app/main/default/objects/Asset_Delete_Rule__mdt/fields/BlockIfAnyMaintenanceExists_c__c.field-meta.xml
<CustomField>
    <fullName>BlockIfAnyMaintenanceExists_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockIfAnyMaintenanceExists__c</label>
    <type>Checkbox</type>
</CustomField>